// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<Localized
  attrs={
    Object {
      "aria-label": true,
    }
  }
  id="moderate-comment-acceptButton"
>
  <ForwardRef(forwardRef)
    aria-label="Accept"
    className="AcceptButton-root"
  >
    <ForwardRef(forwardRef)
      className="AcceptButton-icon"
      size="lg"
    >
      done
    </ForwardRef(forwardRef)>
  </ForwardRef(forwardRef)>
</Localized>
`;

exports[`renders correctly inverted 1`] = `
<Localized
  attrs={
    Object {
      "aria-label": true,
    }
  }
  id="moderate-comment-acceptButton"
>
  <ForwardRef(forwardRef)
    aria-label="Accept"
    className="AcceptButton-root AcceptButton-invert"
  >
    <ForwardRef(forwardRef)
      className="AcceptButton-icon"
      size="lg"
    >
      done
    </ForwardRef(forwardRef)>
  </ForwardRef(forwardRef)>
</Localized>
`;
